Initial markup for home page.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,111 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Skies Fall Media</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Skies Fall Media</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!-- BigVideo Dependencies -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-2.0.3.min.js"><\/script>')</script>
-	<script src="js/jquery-ui-1.8.22.custom.min.js"></script>
-	<script src="js/jquery.imagesloaded.min.js"></script>
-	<script src="http://vjs.zencdn.net/4.0/video.js"></script>
+		<!-- BigVideo Dependencies -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/jquery-2.0.3.min.js"><\/script>')</script>
+		<script src="js/jquery-ui-1.8.22.custom.min.js"></script>
+		<script src="js/jquery.imagesloaded.min.js"></script>
+		<script src="http://vjs.zencdn.net/4.0/video.js"></script>
 
-	<!-- BigVideo -->
-	<script src="js/bigvideo.js"></script>
+		<!-- BigVideo -->
+		<script src="js/bigvideo.js"></script>
 
+		<link href="css/style.css" rel="stylesheet" type="text/css">
+		<link href="css/responsive.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<nav>
+			<ul>
+				<li class="logo">
+					<h1><a href="">Skies Fall Media</a></h1>
+				</li>
+				<li>
+					<a href="">Who We Are</a>
+				</li>
+				<li>
+					<a href="">Audio</a>
+				</li>
+				<li>
+					<a href="">Photo</a>
+				</li>
+				<li>
+					<a href="">Design</a>
+				</li>
+			</ul>
+		</nav>
+		<div id="panel-1">
+			<span class="heading">We own the sky</span>
+			<p>We are artists, sound &amp; visual designers, photographers, filmmakers, and business strategists. Seekers of beauty &amp; innovation. Bound together by our common ambition to engage culture in a pursuit of
+excellence, creativity, and authentic connection.</p>
+		</div>
+		<div id="panel-2">
+			<span class="heading">We've had the pleasure to work with</span>
+			<ul id="portfolio">
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+				<li>
+					<a href=""><img src="" alt="" /></a>
+				</li>
+			</ul>
+		</div>
+		<div id="panel-3">
+			<div id="video">
+				<h2>Video</h2>
+			</div>
+			<div id="audio">
+				<h2>Audio</h2>
+			</div>
+			<div id="photography">
+				<h2>Photography</h2>
+			</div>
+			<div id="design">
+				<h2>Design</h2>
+			</div>
+		</div>
+		<div id="panel-4" class="location">
 
+		</div>
+		<div id="panel-5" class="map">
 
+		</div>
+		<div id="panel-6" class="colophon">
+
+		</div>
 	</body>
 </html>
