Add heading and subheading placeholder styles.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 excellence, creativity, and authentic connection.</p>
 		</div>
 		<div id="panel-2">
-			<span class="heading">We've had the pleasure to work with</span>
+			<span class="subheading">We've had the pleasure to work with</span>
 			<ul id="portfolio">
 				<li>
 					<a href=""><img src="" alt="" /></a>
