Adding a real image.  Lots of home page changes, minor structural changes.

--- a/index.html
+++ b/index.html
@@ -18,94 +18,110 @@
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<link href="css/responsive.css" rel="stylesheet" type="text/css">
 	</head>
-	<body>
-		<nav>
-			<ul>
-				<li class="logo">
-					<h1><a href="">Skies Fall Media</a></h1>
-				</li>
-				<li>
-					<a href="">Who We Are</a>
-				</li>
-				<li>
-					<a href="">Audio</a>
-				</li>
-				<li>
-					<a href="">Photo</a>
-				</li>
-				<li>
-					<a href="">Design</a>
-				</li>
-			</ul>
-		</nav>
-		<div id="panel-1">
-			<span class="heading">We own the sky</span>
-			<p>We are artists, sound &amp; visual designers, photographers, filmmakers, and business strategists. Seekers of beauty &amp; innovation. Bound together by our common ambition to engage culture in a pursuit of
-excellence, creativity, and authentic connection.</p>
-		</div>
-		<div id="panel-2">
-			<span class="subheading">We've had the pleasure to work with</span>
-			<ul id="portfolio">
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-				<li>
-					<a href=""><img src="" alt="" /></a>
-				</li>
-			</ul>
-		</div>
-		<div id="panel-3">
-			<div id="video">
-				<h2>Video</h2>
-			</div>
-			<div id="audio">
-				<h2>Audio</h2>
-			</div>
-			<div id="photography">
-				<h2>Photography</h2>
-			</div>
-			<div id="design">
-				<h2>Design</h2>
-			</div>
-		</div>
-		<div id="panel-4" class="location">
+	<body class="home">
 
+		<!-- Panel #1 will always include the navigation !-->
+		<div id="panel-1" class="panel">
+			<div class="panel-container">
+				<nav class="header">
+					<ul>
+						<li class="logo">
+							<h1><a href=""><img src="img/logo.png" alt="Skies Fall Media" /></a></h1>
+						</li>
+						<li>
+							<a href="">Who We Are</a>
+						</li>
+						<li>
+							<a href="">Video</a>
+						</li>
+						<li>
+							<a href="">Audio</a>
+						</li>
+						<li>
+							<a href="">Photo</a>
+						</li>
+						<li>
+							<a href="">Design</a>
+						</li>
+					</ul>
+				</nav>
+				<span class="heading">We own the sky</span>
+				<p class="quote">We are artists, sound &amp; visual designers, photographers, filmmakers, and business strategists. Seekers of beauty &amp; innovation.<br />Bound together by our common ambition to engage culture in a pursuit of excellence, creativity, and authentic connection.</p>
+			</div>
 		</div>
-		<div id="panel-5" class="map">
 
+		<div id="panel-2" class="panel">
+			<div class="panel-container">
+				<span class="subheading">We've had the pleasure to work with</span>
+				<ul id="portfolio">
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+					<li>
+						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+					</li>
+				</ul>
+			</div>
 		</div>
-		<div id="panel-6" class="colophon">
 
+		<div id="panel-3" class="panel">
+			<div class="panel-container">
+				<div id="video">
+					<h2>Video</h2>
+				</div>
+				<div id="audio">
+					<h2>Audio</h2>
+				</div>
+				<div id="photography">
+					<h2>Photography</h2>
+				</div>
+				<div id="design">
+					<h2>Design</h2>
+				</div>
+			</div>
 		</div>
+
+		<div id="panel-4" class="panel location">
+			<div class="panel-container"></div>
+		</div>
+
+		<div id="panel-5" class="panel map">
+			<div class="panel-container"></div>
+		</div>
+
+		<div id="panel-6" class="panel colophon">
+			<div class="panel-container"></div>
+		</div>
+
 	</body>
 </html>
