Smooth transition on links a bit, add client logos

--- a/index.html
+++ b/index.html
@@ -55,40 +55,40 @@
 				<span class="subheading">We've had the pleasure to work with</span>
 				<ul id="portfolio">
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/jockey.png" alt="Jockey" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/target.png" alt="Target" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/e.png" alt="E! Entertainment" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/united-way.png" alt="United Way" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/atlantic.png" alt="Atlantic Records" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/mtv.png" alt="MTV" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/dillards.png" alt="Dillard's" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/qvc.png" alt="QVC" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/hbo.png" alt="HBO" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/skillet.png" alt="Skillet" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/reach.png" alt="Reach Records" /></a>
 					</li>
 					<li>
-						<a href=""><img src="http://placekitten.com/200/135" alt="" /></a>
+						<a href=""><img src="img/client-logos/cw.png" alt="The CW" /></a>
 					</li>
 				</ul>
 			</div>
