--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src="js/jquery-ui-1.8.22.custom.min.js"></script>
 		<script src="js/jquery.imagesloaded.min.js"></script>
 		<script src="http://vjs.zencdn.net/4.0/video.js"></script>
+		<script src="js/modernizr-2.5.3.min.js"></script>
 
 		<!-- BigVideo -->
 		<script src="js/bigvideo.js"></script>
@@ -128,7 +129,7 @@
             // initialize BigVideo
             BV = new $.BigVideo();
 			BV.init();
-			if (Modernizr.touch) {
+			if (  Modernizr.touch ) {
 				BV.show('http://2.bp.blogspot.com/-S2sK9xIPhzU/ULePRPpu_4I/AAAAAAAACXA/XTkaNreDs3g/s1600/black-and-white-wheat-inkbluesky.png');
 			} else {
 				BV.show('http://skiesfall.com/video/bg.mp4',{ambient:true});
