Update placeholder img for mobile.  Because 495Kb is better than 2.8Mb.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             BV = new $.BigVideo();
 			BV.init();
 			if (  Modernizr.touch ) {
-				BV.show('http://2.bp.blogspot.com/-S2sK9xIPhzU/ULePRPpu_4I/AAAAAAAACXA/XTkaNreDs3g/s1600/black-and-white-wheat-inkbluesky.png');
+				BV.show('img/mobile-placeholder.jpg');
 			} else {
 				BV.show('http://skiesfall.com/video/bg.mp4',{ambient:true});
 			}
