Adding responsive boilerplate.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="js/jquery.imagesloaded.min.js"></script>
 		<script src="http://vjs.zencdn.net/4.0/video.js"></script>
 		<script src="js/modernizr-2.5.3.min.js"></script>
+		<script src="js/site.js"></script>
 
 		<!-- BigVideo -->
 		<script src="js/bigvideo.js"></script>
