Resizing panels dynamically, more map work.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 		<script src="http://vjs.zencdn.net/4.0/video.js"></script>
 		<script src="js/modernizr-2.5.3.min.js"></script>
 		<script src="js/stellar.js"></script>
-		<script src="js/site.js"></script>
 
 		<!-- BigVideo -->
 		<script src="js/bigvideo.js"></script>
 
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<link href="css/responsive.css" rel="stylesheet" type="text/css">
+
+		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 	</head>
 	<body class="home">
 
@@ -118,10 +119,11 @@
 			<div class="panel-container"></div>
 		</div>
 
-		<div id="panel-5 map-canvas" class="panel"></div>
+		<div id="panel-5" class="panel map"></div>
 
 		<div id="panel-6" class="panel colophon">
 			<div class="panel-container"></div>
 		</div>
+		<script src="js/site.js"></script>
 	</body>
 </html>
