Adding navigation pages (placeholders, at the moment), as well as finishing off the essentials of the Services panel.

--- a/photo.html
+++ b/photo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Skies Fall Media</title>
+		<title>Photo | Skies Fall Media</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 	</head>
-	<body class="home">
+	<body class="photo">
 
 		<!-- Panel #1 will always include the navigation !-->
 		<div id="panel-1" class="panel">
@@ -99,30 +99,18 @@
 		</div>
 
 		<div id="panel-3" class="panel">
-			<div class="panel-container full-width">
+			<div class="panel-container">
 				<div id="video">
 					<h2>Video</h2>
-					<div class="img">
-						<img src="img/video-large.png" alt="" />
-					</div>
 				</div>
 				<div id="audio">
 					<h2>Audio</h2>
-					<div class="img">
-						<img src="img/audio-large.png" alt="" />
-					</div>
 				</div>
 				<div id="photography">
 					<h2>Photography</h2>
-					<div class="img">
-						<img src="img/photo-large.png" alt="" />
-					</div>
 				</div>
 				<div id="design">
 					<h2>Design</h2>
-					<div class="img">
-						<img src="img/design-large.png" alt="" />
-					</div>
 				</div>
 			</div>
 		</div>
