Finishing details on Location panel.  Also, TypeKit.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<!-- TypeKit -->
+		<script type="text/javascript" src="//use.typekit.net/yzy8slw.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 		<!-- BigVideo Dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
@@ -12,14 +16,18 @@
 		<script src="js/jquery.imagesloaded.min.js"></script>
 		<script src="http://vjs.zencdn.net/4.0/video.js"></script>
 		<script src="js/modernizr-2.5.3.min.js"></script>
-		<script src="js/stellar.js"></script>
 
 		<!-- BigVideo -->
 		<script src="js/bigvideo.js"></script>
 
+		<!-- Parallax API -->
+		<script src="js/stellar.js"></script>
+
+		<!-- Stylesheets -->
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<link href="css/responsive.css" rel="stylesheet" type="text/css">
 
+		<!-- GoogleMaps API -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 	</head>
 	<body class="home">
