--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
 				<div id='contact-bubble'>
 					<a class="contact">Say Hello</a>
 				</div>
+				<form id="contact-form" action="contact.php" method="POST">
+					<div id="contact">
+						<label id="name">Name<input type="text" name="name" /></label>
+						<label id="email">Email<input type="text" name="email" /></label>
+						<label id="message">Message<textarea name="message"></textarea></label>
+						<input type="submit" value="Send" />
+					</div>
+				</form>
 			</div>
 		</div>
 		<span class="down-arrow"></span>
