--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 						<label id="name">Name<input type="text" name="name" /></label>
 						<label id="email">Email<input type="text" name="email" /></label>
 						<label id="message">Message<textarea name="message"></textarea></label>
+						<input name="gotye" id="gotye" value="" type="hidden" />
 						<input type="submit" value="Send" />
 					</div>
 				</form>
