--- a/index.html
+++ b/index.html
@@ -170,6 +170,25 @@
 						<label id="message">Message<textarea name="message"></textarea></label>
 						<input name="gotye" id="gotye" value="" type="hidden" />
 						<input type="submit" value="Send" />
+
+						<div id="circularG" class='ajax-loader'>
+							<div id="circularG_1" class="circularG">
+							</div>
+							<div id="circularG_2" class="circularG">
+							</div>
+							<div id="circularG_3" class="circularG">
+							</div>
+							<div id="circularG_4" class="circularG">
+							</div>
+							<div id="circularG_5" class="circularG">
+							</div>
+							<div id="circularG_6" class="circularG">
+							</div>
+							<div id="circularG_7" class="circularG">
+							</div>
+							<div id="circularG_8" class="circularG">
+							</div>
+						</div>
 					</div>
 				</form>
 			</div>
