Add select states to nav.  Focus on input when toggling Say Hello.

--- a/photo.html
+++ b/photo.html
@@ -42,7 +42,7 @@
 							<a href="audio.html">Audio</a>
 						</li>
 						<li>
-							<a href="photo.html">Photo</a>
+							<a class="selected" href="photo.html">Photo</a>
 						</li>
 						<li>
 							<a href="design.html">Design</a>
