--- a/video.html
+++ b/video.html
@@ -36,7 +36,7 @@
 							<a href="who-we-are.html">Who We Are</a>
 						</li>
 						<li>
-							<a href="video.html">Video</a>
+							<a class="selected" href="video.html">Video</a>
 						</li>
 						<li>
 							<a href="audio.html">Audio</a>
