--- a/audio.html
+++ b/audio.html
@@ -39,7 +39,7 @@
 							<a href="video.html">Video</a>
 						</li>
 						<li>
-							<a href="audio.html">Audio</a>
+							<a class="selected" href="audio.html">Audio</a>
 						</li>
 						<li>
 							<a href="photo.html">Photo</a>
