--- a/design.html
+++ b/design.html
@@ -45,7 +45,7 @@
 							<a href="photo.html">Photo</a>
 						</li>
 						<li>
-							<a href="design.html">Design</a>
+							<a class="selected" href="design.html">Design</a>
 						</li>
 					</ul>
 				</nav>
