--- a/who-we-are.html
+++ b/who-we-are.html
@@ -33,7 +33,7 @@
 							<h1><a href="/dev"><img src="img/logo.png" alt="Skies Fall Media" /></a></h1>
 						</li>
 						<li>
-							<a href="who-we-are.html">Who We Are</a>
+							<a class="selected" href="who-we-are.html">Who We Are</a>
 						</li>
 						<li>
 							<a href="video.html">Video</a>
