--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			</div>
 		</div>
 		<span class="down-arrow"></span>
-		<div id="panel-5" class="panel map"></div>
+		<div id="map" class="panel map"></div>
 		<div id="panel-6" class="panel colophon">
 			<div class="panel-container"></div>
 		</div>
