Adding Genericons for social.  Better for HiDPI.  First pass of complete home page, complete.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<!-- Stylesheets -->
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<link href="css/responsive.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="genericons/genericons.css">
 
 		<!-- GoogleMaps API -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
@@ -196,7 +197,18 @@
 		<span class="down-arrow"></span>
 		<div id="map" class="panel map"></div>
 		<div id="panel-6" class="panel colophon">
-			<div class="panel-container"></div>
+			<div class="panel-container">
+				<p class="copyright">
+					&copy; <?php echo date( 'Y' ); ?> Skies Fall Media Group. All Rights Reserved.
+				</p>
+				<div class='social'>
+					<ul>
+						<li class="twitter"><a class="genericon genericon-twitter" href="http://twitter.com"></a></li>
+						<li class="facebook"><a href="http://facebook.com" class="genericon genericon-facebook-alt"></a></li>
+						<li class="vimeo"><a href="http://vimeo.com" class="genericon genericon-vimeo"></a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<script src="js/site.js"></script>
 	</body>
