--- a/video.html
+++ b/video.html
@@ -5,6 +5,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<!-- TypeKit -->
+		<script type="text/javascript" src="//use.typekit.net/yzy8slw.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 		<!-- BigVideo Dependencies -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
@@ -12,14 +16,19 @@
 		<script src="js/jquery.imagesloaded.min.js"></script>
 		<script src="http://vjs.zencdn.net/4.0/video.js"></script>
 		<script src="js/modernizr-2.5.3.min.js"></script>
-		<script src="js/stellar.js"></script>
 
 		<!-- BigVideo -->
 		<script src="js/bigvideo.js"></script>
 
+		<!-- Parallax API -->
+		<script src="js/stellar.js"></script>
+
+		<!-- Stylesheets -->
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<link href="css/responsive.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="genericons/genericons.css">
 
+		<!-- GoogleMaps API -->
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 	</head>
 	<body class="video">
@@ -99,30 +108,107 @@
 		</div>
 
 		<div id="panel-3" class="panel">
-			<div class="panel-container">
+			<div class="panel-container full-width">
 				<div id="video">
 					<h2>Video</h2>
+					<div class="img">
+						<img src="img/video-large.png" alt="" />
+					</div>
 				</div>
 				<div id="audio">
 					<h2>Audio</h2>
+					<div class="img">
+						<img src="img/audio-large.png" alt="" />
+					</div>
 				</div>
 				<div id="photography">
 					<h2>Photography</h2>
+					<div class="img">
+						<img src="img/photo-large.png" alt="" />
+					</div>
 				</div>
 				<div id="design">
 					<h2>Design</h2>
+					<div class="img">
+						<img src="img/design-large.png" alt="" />
+					</div>
 				</div>
 			</div>
 		</div>
 
 		<div id="panel-4" class="panel location">
-			<div class="panel-container"></div>
+			<div class="panel-container">
+				<h3>Locations</h3>
+				<div class="address">
+					Headquarters &amp; Creative Studios<br />
+					2745 Chicory Road<br />
+					Racine, WI 53403<br /><br />
+					<span>262-456-4027<br />
+					<a href="mailto:&#105;&#110;&#102;&#111;&#064;&#115;&#107;&#105;&#101;&#115;&#102;&#097;&#108;&#108;&#046;&#099;&#111;&#109;">info@skiesfall.com</a></span>
+				</div>
+				<div class="address">
+					Skies Fall Recording Studios<br />
+					3215 60th St.<br />
+					Kenosha, WI 53142<br /><br />
+
+					<span>262-455-5814<br />
+					<a href="mailto:&#105;&#110;&#102;&#111;&#064;&#115;&#107;&#105;&#101;&#115;&#102;&#097;&#108;&#108;&#046;&#099;&#111;&#109;">info@skiesfall.com</a></span>
+				</div>
+				<div class="address">
+					Skies Fall/BelleTV Studios<br />
+					800 Center St.<br />
+					Racine, WI 53403<br /><br />
+					<span>262-619-3506<br />
+					<a href="mailto: &#116;&#104;&#101;&#098;&#101;&#108;&#108;&#101;&#116;&#118;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">thebelletv@gmail.com</a></span>
+				</div>
+				<div id='contact-bubble'>
+					<a class="contact">Say Hello</a>
+				</div>
+				<form id="contact-form" action="contact.php" method="POST">
+					<div id="contact">
+						<label id="name">Name<input type="text" name="name" /></label>
+						<label id="email">Email<input type="text" name="email" /></label>
+						<label id="message">Message<textarea name="message"></textarea></label>
+						<input name="gotye" id="gotye" value="" type="hidden" />
+						<input type="submit" value="Send" />
+
+						<div id="circularG" class='ajax-loader'>
+							<div id="circularG_1" class="circularG">
+							</div>
+							<div id="circularG_2" class="circularG">
+							</div>
+							<div id="circularG_3" class="circularG">
+							</div>
+							<div id="circularG_4" class="circularG">
+							</div>
+							<div id="circularG_5" class="circularG">
+							</div>
+							<div id="circularG_6" class="circularG">
+							</div>
+							<div id="circularG_7" class="circularG">
+							</div>
+							<div id="circularG_8" class="circularG">
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
 		</div>
-
-		<div id="panel-5" class="panel map"></div>
-
+		<span class="down-arrow"></span>
+		<div id="map" class="panel map"></div>
 		<div id="panel-6" class="panel colophon">
-			<div class="panel-container"></div>
+			<div class="panel-container">
+				<p class="copyright">
+					&copy; <?php echo date( 'Y' ); ?> Skies Fall Media Group. All Rights Reserved.
+				</p>
+				<div class='social'>
+					<ul>
+						<li class="twitter"><a class="genericon genericon-twitter" href="http://twitter.com"></a></li>
+						<li class="facebook"><a href="http://facebook.com" class="genericon genericon-facebook-alt"></a></li>
+						<li class="vimeo"><a href="http://vimeo.com" class="genericon genericon-vimeo"></a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<script src="js/site.js"></script>
 	</body>
