Static assets for Panel 2 for Who We Are.

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -63,7 +63,19 @@
 			</div>
 		</div>
 
-
+		<div id="panel-2" class="panel">
+			<div class="panel-container">
+				<div class="content-1">
+					<h2>ART. EXCELLENCE. PEOPLE.</h2>
+					<p>Skies Fall Media Group was founded in 2008 by Skillet (Atlantic Records) guitarist Ben Kasica with artist and entrepreneur Joe Snyder in order to facilitate a wide range of creative business development in the realm of the arts and media. The company was birthed from a vision to bring professional assistance to talented working artists, musicians and media developers, providing a relevant and profitable context in which to express their crafts - from music and photography to film and video to fine art and design. We strive to identify, cultivate and promote the gifting and creativity of our team and our clients in order to assist them in being as productive, creative, and successful as possible.  We endeavor to assist our clients in presenting to the public words, sights and sounds poised to entertain, instruct, arouse and inspire.</p>
+				</div>
+				<div class="content-2">
+					<h2>A place to do our life’s best work.</h2>
+					<p>Skies Fall is about developing talent and providing opportunities.  Since our inception, we have worked
+with hundreds of artists, local and distant, domestic and foreign, with one aim: to develop the person and their art and give them a context in which to shine. On a local level, we have developed art shows, concerts, music festivals, commercials and short films. On a wider level, we have worked with business professionals, musicians, film-makers, writers, audio &amp; video engineers, photographers, actors and other creatives to develop content for companies like Atlantic Records, Warner Bros., E! Television, HBO Television, Target, QVC, Jockey International, Tooth &amp; Nail Records.</p>
+				</div>
+			</div>
+		</div>
 
 		<div id="panel-4" class="panel location">
 			<div class="panel-container">
