--- a/who-we-are.html
+++ b/who-we-are.html
@@ -73,6 +73,26 @@
 					<h2><span class="heading">A<br />place<br />to do<br />our life’s<br />best<br />work.</span></h2>
 					<p>Skies Fall is about developing talent and providing opportunities.  Since our inception, we have worked
 with hundreds of artists, local and distant, domestic and foreign, with one aim: to develop the person and their art and give them a context in which to shine. On a local level, we have developed art shows, concerts, music festivals, commercials and short films. On a wider level, we have worked with business professionals, musicians, film-makers, writers, audio &amp; video engineers, photographers, actors and other creatives to develop content for companies like Atlantic Records, Warner Bros., E! Television, HBO Television, Target, QVC, Jockey International, Tooth &amp; Nail Records.</p>
+					<ul id="portfolio">
+						<li>
+							<a href=""><img src="img/client-logos/atlantic.png" alt="Atlantic Records" /></a>
+						</li>
+						<li>
+							<a href=""><img src="img/client-logos/jockey.png" alt="Jockey" /></a>
+						</li>
+						<li>
+							<a href=""><img src="img/client-logos/cw.png" alt="The CW" /></a>
+						</li>
+						<li>
+							<a href=""><img src="img/client-logos/target.png" alt="Target" /></a>
+						</li>
+						<li>
+							<a href=""><img src="img/client-logos/e.png" alt="E! Entertainment" /></a>
+						</li>
+						<li>
+							<a href=""><img src="img/client-logos/hbo.png" alt="HBO" /></a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
