First pass at bio content.

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -72,7 +72,7 @@
 				<div class="content-2">
 					<h2><span class="heading">A<br />place<br />to do<br />our life’s<br />best<br />work.</span></h2>
 					<p>Skies Fall is about developing talent and providing opportunities.  Since our inception, we have worked
-with hundreds of artists, local and distant, domestic and foreign, with one aim: to develop the person and their art and give them a context in which to shine. On a local level, we have developed art shows, concerts, music festivals, commercials and short films. On a wider level, we have worked with business professionals, musicians, film-makers, writers, audio &amp; video engineers, photographers, actors and other creatives to develop content for companies like Atlantic Records, Warner Bros., E! Television, HBO Television, Target, QVC, Jockey International, Tooth &amp; Nail Records.</p>
+					with hundreds of artists, local and distant, domestic and foreign, with one aim: to develop the person and their art and give them a context in which to shine. On a local level, we have developed art shows, concerts, music festivals, commercials and short films. On a wider level, we have worked with business professionals, musicians, film-makers, writers, audio &amp; video engineers, photographers, actors and other creatives to develop content for companies like Atlantic Records, Warner Bros., E! Television, HBO Television, Target, QVC, Jockey International, Tooth &amp; Nail Records.</p>
 					<ul id="portfolio">
 						<li>
 							<a href=""><img src="img/client-logos/atlantic.png" alt="Atlantic Records" /></a>
@@ -93,6 +93,41 @@ with hundreds of artists, local and distant, domestic and foreign, with one aim:
 							<a href=""><img src="img/client-logos/hbo.png" alt="HBO" /></a>
 						</li>
 					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div id="panel-3" class="panel">
+			<div class="panel-container">
+				<div class="bio">
+					<img src="img/ben.png" alt="" />
+					<h2>Ben Kasica, Owner/Producer</h2>
+					<p>A St. Louis native, Ben was the lead guitarist for the band Skillet (Atlantic Records) for 10 years. During his time with the band, Skillet sold over 2 million records, was nominated for 2 Grammy awards, won a Dove Award and scored numerous #1 radio singles. He has worked with world-renown producers like Howard Benson, Brian Howes and Paul Ebersold; and has engineered, co-written &amp; produced music for artists such as Corey Taylor of Slipknot &amp; Stone Sour, Skillet, Icon for Hire, We Are Leo and Silverline. He also spearheads the video, film &amp; television divisions of Skies Fall and has produced numerous commercial advertisements and music videos for the likes of Jockey International, E! Television, QVC, Skillet and Kohl’s. Ben enjoys friends, photography, sushi, community service and sports.</p>
+				</div>
+				<div class="bio right">
+					<img src="img/joe.png" alt="" />
+					<h2>Joe Snyder, Owner/Executive Producer</h2>
+					<p>With a varied background in design, music, construction and manufacturing, Joe has served as executive producer for chart-topping artists such as Everett Thomas, Silverline and We Are Leo and also serves in artist development while heading the business affairs of Skies Fall. Joe has been executive producer for numerous video &amp; design projects for clients such as Skillet, Jockey International, and Belletv. He also serves as creative director for the non-profit, LEAP (Leadership and Education for Africa Project).  Joe and his wife, Shelly, have 5 children and enjoy art &amp; architecture, music, film &amp; theater, travel, home entertaining and serving in their local church community.</p>
+				</div>
+				<div class="bio">
+					<img src="img/nick.png" alt="" />
+					<h2>Nick Radovanovic, 1st Engineer/Producer</h2>
+					<p>Nick was the drummer for the band Acceptance (Columbia Records/Militia Group) and guitarist for Hangnail (Tooth &amp; Nail Records). Hangnail was nominated for a Dove Award and two WAMI's. He has been involved with professional engineering and mixing for over 7 years and has worked with producers Howard Benson (My Chemical Romance, Daughtry, Flyleaf) and Aaron Sprinkle (Anberlin, MXPX, Thousand Foot Crutch, Mae). Nick is the 1st Engineer and mixing engineer for Skies Fall Studios along with producing many bands. Nick and his Wife, Sam, reside in the Milwaukee area and enjoy music, friends, family and the Green Bay Packers. Go Pack Go!  </p>
+				</div>
+				<div class="bio right">
+					<img src="img/joey.png" alt="" />
+					<h2>Joey Papa, Creative Director</h2>
+					<p>Joey grew up in the shadow of New York City immersed in the arts. After completing his B.A. in Communications from Oral Roberts University, he immediately began working as a road manager and production assistant for Acquire the Fire Productions. Joey has been heavily involved with stage production, acting/performance and the creative process for most of his professional career. Before joining Skies Fall, Joey was a full-time freelance copywriter. Joey resides in Racine, Wisconsin with his wife, Nikki and their 4 children. He enjoys musical theater, poetry, writing, traveling and expanding his mind through inspiration. </p>
+				</div>
+				<div class="bio">
+					<img src="img/steven.png" alt="" />
+					<h2>Steven Servi, 2nd Engineer/Producer</h2>
+					<p>Steven developed his talent for music and film at a young age and explored those passions with his family, friends and local church.  His interest quickly turned toward recording &amp; engineering, so in 2008 Steven enrolled at SAE Institute (Nashville, TN) becoming professionally certified in audio engineering.  Since then, Steven has been perfecting his technique with opportunities ranging from internships at The Tracking Room (Nashville, TN)/ 5th Floor Recording (Milwaukee, WI) to head engineer of Acacia Theatre. Since joining Skies Fall in 2010, Steven has become the primary editor while producing and assisting on a variety of music and film projects.  Steven loves coloring, reading, and tea-time with his beautiful daughter Brooklyn; he also enjoys collaborating on a variety of artistic projects with family and friends.</p>
+				</div>
+				<div class="bio right">
+					<img src="img/dom.png" alt="" />
+					<h2>Dominic Kegel, Film &amp; Video</h2>
+					<p>Raised in an artistic and nomadic family, Dom got an early start experiencing the different artistic interpretations and perspectives of the world. His love for the arts stems from early roots in music, but has found its current passion in film &amp; video.  He and his wife, Susan, have since visited all the continents save Antarctica while living and working in many cities and countries as a freelance video and photography producer AND playing professional football. Dom and Suz have now settled in Racine (of all places!) where they eagerly await the arrival of their first child (and a call from the Green Bay Packers).</p>
 				</div>
 			</div>
 		</div>
