--- a/who-we-are.html
+++ b/who-we-are.html
@@ -129,6 +129,21 @@
 					<h2>Dominic Kegel, Film &amp; Video</h2>
 					<p>Raised in an artistic and nomadic family, Dom got an early start experiencing the different artistic interpretations and perspectives of the world. His love for the arts stems from early roots in music, but has found its current passion in film &amp; video.  He and his wife, Susan, have since visited all the continents save Antarctica while living and working in many cities and countries as a freelance video and photography producer AND playing professional football. Dom and Suz have now settled in Racine (of all places!) where they eagerly await the arrival of their first child (and a call from the Green Bay Packers).</p>
 				</div>
+				<div class="bio">
+					<img src="img/christian.png" alt="" />
+					<h2>Christian Seibert, Producer</h2>
+					<p>Hailing from an east-coast musical family, Christian developed a thirst for culture and music as a youngster.  An undesired move to the midwest pushed him further into music where  he played and sang in multiple bands.  After a short stint in music business school, Christian dropped out to be a tour guitarist with Columbia and Universal Records musicians such as Natasha Bedingfield, Mat Kearney and Kate Voegel.  Between tours, he worked with music producers such as Jon Kaplan and Mikal Blue while also working as Creative Director at a multimedia firm with an emphasis on commercial photography and video production.  Christian currently utilizes his creativity at Skies Fall both in music and video production.  He enjoys writing music, skateboarding and chilling with his puppy, Dex.</p>
+				</div>
+				<div class="bio right">
+					<img src="img/jordan.png" alt="" />
+					<h2>Jordan Stocker, Director of Marketing &amp; Sales</h2>
+					<p>Wisconsin born and bred, and raised by business professionals, out of college, Jordan earned a Business Marketing Executive position for a midwest media agency, leading the Digital Products Management and Sales division.  After an entrepreneural stint as an independent marketing consultant, Jordan joined the BRP-Evinrude marketing team, spearheading Digital Marketing Projects, social media strategy and copywriting.  In joining Skies Fall in 2013, Jordan heads our sales and marketing initiatives from concept to implementation.  Jordan is also musician, producer and accomlished DJ, working events such as The Electric Run.  He enjoys friends, fitness, and sports and is a closet-nerd, currently enjoying Warhammer and having achieved high world rankings in video games such as The Lord of the Rings: Battle for Middle Earth and Gears of War.</p>
+				</div>
+				<div class="bio">
+					<img src="img/chino.png" alt="" />
+					<h2>Chino Villatoro, Head Designer/Art Director</h2>
+					<p>Born in Guatemala and raised in the Chicago area, Chino grew up drawing and playing guitar in rock bands.  After dropping out of college, he took a design gig at a midwest promotions agency where he got his first taste of production art in the business world.  Seeing more potential for expression and growth doing freelance work, Chino launched his own company, Liosvi Image & Design, focusing on design and photography, pioneering dozens of campaigns and shoots while honing his design skills and eye for style and art direction.  He joined Skies Fall in 2013 as Head Designer and Art Director.  Chino and his lovely wife, Crystal, have two beautiful young daughters.  He enjoys professional wrestling, travel, fashion and tattoos.</p>
+				</div>
 			</div>
 		</div>
 
