Adding Zepto to see if we can't smooth some animation on Mobile.

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -16,6 +16,7 @@
 		<script src="js/jquery.imagesloaded.min.js"></script>
 		<script src="http://vjs.zencdn.net/4.0/video.js"></script>
 		<script src="js/modernizr-2.5.3.min.js"></script>
+		<script src="js/zepto.js"></script>
 
 		<!-- BigVideo -->
 		<script src="js/bigvideo.js"></script>
