--- a/ios.html
+++ b/ios.html
@@ -4,6 +4,11 @@
 		<title>Stellar.js - iOS Demo</title>
 		<meta charset="utf-8"/>
 		<style type="text/css">
+		 html {
+			overflow: hidden;
+			background: #333;
+			font-family: Helvetica;
+		}
 		.bar.top {
 		    top: 0;
 		    height: 44px;
