--- a/ios.html
+++ b/ios.html
@@ -5,7 +5,6 @@
 		<meta charset="utf-8"/>
 		<style type="text/css">
 		 html {
-			overflow: hidden;
 			background: #333;
 			font-family: Helvetica;
 		}
@@ -141,7 +140,10 @@
 				<div class="sections">
 
 					<div class="section one">
-						<div class="stellar-particle one" data-stellar-ratio="3"></div>
+						<div class="stellar-particle one" data-stellar-ratio="3"><div class="panel-container" data-stellar-ratio=".75">
+				<span class="heading">We own the sky</span>
+				<p class="quote">We are artists, sound &amp; visual designers, photographers, filmmakers, and business strategists. Seekers of beauty &amp; innovation.<br />Bound together by our common ambition to engage culture in a pursuit of excellence, creativity, and authentic connection.</p>
+			</div></div>
 						<div class="stellar-particle two" data-stellar-ratio="5"></div>
 						<div class="stellar-particle three" data-stellar-ratio="7"></div>
 						<div class="stellar-particle four" data-stellar-ratio="4"></div>
