--- a/ios.html
+++ b/ios.html
@@ -112,16 +112,16 @@
 		}
 
 		</style>
+		<link href="css/style.css" rel="stylesheet" type="text/css">
+
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
 		<script src="js/stellar.js"></script>
 		<script language="javascript">
 		$(function(){
 			$('#page').stellar({
-				horizontalScrolling: false,
 				scrollProperty: 'transform',
-				positionProperty: 'transform',
-				verticalOffset: -100
+				positionProperty: 'transform'
 			});
 
 			//Prevent text selection
@@ -140,10 +140,34 @@
 				<div class="sections">
 
 					<div class="section one">
-						<div class="stellar-particle one" data-stellar-ratio="3"><div class="panel-container" data-stellar-ratio=".75">
+						<div class="stellar-particle one" data-stellar-ratio="3"><div id="panel-1" class="panel">
+			<nav class="header">
+				<ul>
+					<li class="logo">
+						<h1><a href="/dev"><img src="img/logo.png" alt="Skies Fall Media" /></a></h1>
+					</li>
+					<li>
+						<a href="who-we-are.html">Who We Are</a>
+					</li>
+					<li>
+						<a href="video.html">Video</a>
+					</li>
+					<li>
+						<a href="audio.html">Audio</a>
+					</li>
+					<li>
+						<a href="photo.html">Photo</a>
+					</li>
+					<li>
+						<a href="design.html">Design</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="panel-container" data-stellar-ratio=".75">
 				<span class="heading">We own the sky</span>
 				<p class="quote">We are artists, sound &amp; visual designers, photographers, filmmakers, and business strategists. Seekers of beauty &amp; innovation.<br />Bound together by our common ambition to engage culture in a pursuit of excellence, creativity, and authentic connection.</p>
-			</div></div>
+			</div>
+		</div></div>
 						<div class="stellar-particle two" data-stellar-ratio="5"></div>
 						<div class="stellar-particle three" data-stellar-ratio="7"></div>
 						<div class="stellar-particle four" data-stellar-ratio="4"></div>
