--- a/ios.html
+++ b/ios.html
@@ -140,7 +140,17 @@
 				<div class="sections">
 
 					<div class="section one">
-						<div class="stellar-particle one" data-stellar-ratio="3"><div id="panel-1" class="panel">
+						<div class="stellar-particle one" data-stellar-ratio="3"></div>
+						<div class="stellar-particle two" data-stellar-ratio="5"></div>
+						<div class="stellar-particle three" data-stellar-ratio="7"></div>
+						<div class="stellar-particle four" data-stellar-ratio="4"></div>
+						<div class="stellar-particle five" data-stellar-ratio="9"></div>
+					</div>
+
+					<div class="section two">
+						<div class="stellar-particle one" data-stellar-ratio="8"></div>
+						<div class="stellar-particle two" data-stellar-ratio="4"></div>
+						<div class="stellar-particle three" data-stellar-ratio="2"><div id="panel-1" class="panel">
 			<nav class="header">
 				<ul>
 					<li class="logo">
@@ -168,16 +178,6 @@
 				<p class="quote">We are artists, sound &amp; visual designers, photographers, filmmakers, and business strategists. Seekers of beauty &amp; innovation.<br />Bound together by our common ambition to engage culture in a pursuit of excellence, creativity, and authentic connection.</p>
 			</div>
 		</div></div>
-						<div class="stellar-particle two" data-stellar-ratio="5"></div>
-						<div class="stellar-particle three" data-stellar-ratio="7"></div>
-						<div class="stellar-particle four" data-stellar-ratio="4"></div>
-						<div class="stellar-particle five" data-stellar-ratio="9"></div>
-					</div>
-
-					<div class="section two">
-						<div class="stellar-particle one" data-stellar-ratio="8"></div>
-						<div class="stellar-particle two" data-stellar-ratio="4"></div>
-						<div class="stellar-particle three" data-stellar-ratio="2"></div>
 						<div class="stellar-particle four" data-stellar-ratio="8"></div>
 						<div class="stellar-particle five" data-stellar-ratio="10"></div>
 					</div>
