--- a/ios.html
+++ b/ios.html
@@ -121,7 +121,8 @@
 		$(function(){
 			$('#page').stellar({
 				scrollProperty: 'transform',
-				positionProperty: 'transform'
+				positionProperty: 'transform',
+				hideDistantElements : false
 			});
 
 			//Prevent text selection
