--- a/ios.html
+++ b/ios.html
@@ -136,7 +136,7 @@
 		<div class="bar top"><a href="../">Stellar.js</a> iOS Demo</div>
 		<div class="bar bottom">Demo created using <a href="https://github.com/joehewitt/scrollability">Scrollability</a></div>
 		<div id="container">
-			<div id="page" class="scrollable vertical">
+			<div id="page" class="">
 
 				<div class="sections">
 
