--- a/who-we-are.html
+++ b/who-we-are.html
@@ -33,32 +33,32 @@
 	</head>
 	<body class="who">
 
-		<!-- Panel #1 will always include the navigation !-->
+				<!-- Panel #1 will always include the navigation !-->
 		<div id="panel-1" class="panel">
-			<div class="panel-container">
-				<nav class="header">
-					<ul>
-						<li class="logo">
-							<h1><a href="/dev"><img src="img/logo.png" alt="Skies Fall Media" /></a></h1>
-						</li>
-						<li>
-							<a class="selected" href="who-we-are.html">Who We Are</a>
-						</li>
-						<li>
-							<a href="video.html">Video</a>
-						</li>
-						<li>
-							<a href="audio.html">Audio</a>
-						</li>
-						<li>
-							<a href="photo.html">Photo</a>
-						</li>
-						<li>
-							<a href="design.html">Design</a>
-						</li>
-					</ul>
-				</nav>
-							<span class="heading">We own the sky</span>
+			<nav class="header">
+				<ul>
+					<li class="logo">
+						<h1><a href="/dev"><img src="img/logo.png" alt="Skies Fall Media" /></a></h1>
+					</li>
+					<li>
+						<a href="who-we-are.html">Who We Are</a>
+					</li>
+					<li>
+						<a href="video.html">Video</a>
+					</li>
+					<li>
+						<a href="audio.html">Audio</a>
+					</li>
+					<li>
+						<a href="photo.html">Photo</a>
+					</li>
+					<li>
+						<a href="design.html">Design</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="panel-container" data-stellar-ratio=".75">
+				<span class="heading">We own the sky</span>
 				<p class="quote">We are artists, sound &amp; visual designers, photographers, filmmakers, and business strategists. Seekers of beauty &amp; innovation.<br />Bound together by our common ambition to engage culture in a pursuit of excellence, creativity, and authentic connection.</p>
 			</div>
 		</div>
